# dilemma

./: Cargo.toml  README.md  TODO.md
examples/: basic.rs
src/: binds.rs  cte.rs  distinct.rs  expr.rs  filter.rs  from.rs  group.rs  grouping.rs  integrations.rs  join.rs  lib.rs  limit.rs  macros.rs  offset.rs  order.rs  ordering.rs  query_dsl.rs  row_locking.rs  select.rs  selection.rs  sql_types.rs  test.rs  write_sql.rs
src/test/: mod.rs  scopes.rs  sql_generation.rs  sqlx_integration.rs
