[package]
name = "dilemma"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
extend = "0.1.1"
sqlx = { version = "0.3.5", features = ["postgres"] }
async-std = { version = "1", features = ["attributes"] }
futures = { version = "0.3.5" }

[dev-dependencies]
